# BitEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  bitengine.files  bitengine.includes  bitengine.sln  bitengine.vcxproj  bitengine.vcxproj.filters  copyfiles.sh  diagram.dia  premake5.lua
BitEngine/dependencies/: assimp.lua  assimp_revision.h  glfw.lua  gtest.lua  imgui.lua  json.lua
BitEngine/src/BitEngine/: bitengine.h
BitEngine/src/Platform/: CMakeLists.txt
ProjectFiles/: BitEngine.cbp  BitEngine.depend
ProjectFiles/CodeBlocks/: BitEngine.cbp
cmake/: bitengine.cmake  glew.cmake  glfw.cmake  glm.cmake  gtest.cmake  nlohmann_json.cmake  stb.cmake
dependencies/: CMakeLists.txt  assimp.cmake  assimp_dep.cmake  glew.cmake  glew_dep.cmake  glfw.cmake  glfw_dep.cmake  glm.cmake  glm_dep.cmake  gtest.cmake  gtest_dep.cmake  nlohmann_json_dep.cmake  stb.cmake  stb_dep.cmake
dependencies/glew/: glew.pc
dependencies/glew-2.1.0/: glew.pc
include/bitengine/: BaseEntitySystem.h  Camera.h  Camera2D.h  Camera2DComponent.h  Camera2DProcessor.h  Camera3DComponent.h  Camera3DProcessor.h  Color.h  CommandSystem.h  Component.h  ComponentCollection.h  ComponentProcess.h  ComponentProcessor.h  Components.h  ComponentsType.h  EngineConfiguration.h  EngineLoggers.h  EntitySystem.h  ErrorCodes.h  GLFW_VideoDriver.h  GLFW_VideoSystem.h  GameEngine.h  GameLogicProcessor.h  Graphics.h  InputSystem.h  Logger.h  LogicScript.h  MathUtils.h  Mesh.h  MessageType.h  ModelManager.h  RenderSystem.h  RenderableMeshComponent.h  RenderableMeshProcessor.h  ResourceManager.h  ResourceSystem.h  SceneGraph.h  SceneNode.h  ShaderProgram.h  SmartManager.h  (+28 more)
include/bitengine/Common/: BitFieldVector.h  ErrorCodes.h  MacroHelpers.h  MathUtils.h  ThreadSafeQueue.h  TypeDefinition.h  VectorBool.h
include/bitengine/Core/: Assert.h  CommandSystem.h  EngineConfiguration.h  EngineLoggers.h  FileResourceLoader.h  GameEngine.h  GameEnginePC.h  GeneralTaskManager.h  Graphics.h  IResourceManager.h  ITexture.h  IVideoRenderer.h  Input.h  InputSystem.h  Logger.h  Math.h  Memory.h  Mesh.h  Message.h  MessageChannel.h  MessageType.h  Messenger.h  ModelManager.h  Reflection.h  ResourceSystem.h  Sprite.h  Sprite2DShader.h  SpriteManager.h  System.h  SystemConfiguration.h  Task.h  TaskManager.h  Texture.h  Timer.h  (+5 more)
resources/tests/: test_resources.idx
samples/data/: main.idx
samples/sample01/: CMakeLists.txt  config.ini
samples/sample01/data/: main.idx
samples/sample01/data/shaders/sprite2D/: gl2.fgt  gl2.vtx
samples/sample01/include/: BasicTypes.h  GameWorld.h  MyGame.h  MyGameEntitySystem.h  MyGameSystem.h  MyResourceSystem.h  Overworld.h  Player.h  PlayerControlLogic.h
samples/sample01/include/Common/: GameGlobal.h
samples/sample01/include/Graphics/: Shader3DProcessor.h  Shader3DSimple.h
samples/sample01/src/: MyGame.h  MyGameEntitySystem.h  MyGameSystem.h  Overworld.h  PlayerControlLogic.h  main.cpp
samples/sample01/src/Common/: CommonMain.h  GameGlobal.h  MainMemory.h
samples/sample01/src/Game/: MyGame.h  MyGameEntitySystem.h  MyGameSystem.h  Overworld.h
samples/sample01/src/Game/Common/: CommonMain.h  GameGlobal.h  MainMemory.h
samples/sample01/src/GamePlatform/: AssimpMeshManager.cpp  AssimpMeshManager.h  ModelManager.cpp  ModelManager.h
samples/sample01/src/GamePlatform/OpenGL/: OpenGLRenderer.h  Shader3DBatchRenderer.cpp  Shader3DProcessor.h  Shader3DSimple.cpp  Shader3DSimple.h  Sprite2DBatch.h
samples/sample01/src/Graphics/: Shader3DBatchRenderer.cpp  Shader3DProcessor.h  Shader3DSimple.cpp  Shader3DSimple.h
src/: BaseEntitySystem.cpp  CMakeLists.txt  Camera2D.cpp  Camera2DComponent.cpp  Camera2DProcessor.cpp  Camera3DProcessor.cpp  CommandSystem.cpp  EngineConfiguration.cpp  EntitySystem.cpp  GameEngine.cpp  GameLogicProcessor.cpp  InputSystem.cpp  ModelManager.cpp  RenderableMeshProcessor.cpp  ResourceManager.cpp  ResourceSystem.cpp  SceneGraph.cpp  SceneNode.cpp  ShaderProgram.cpp  Sprite2DHolder.cpp  Sprite2DProcessor.cpp  Sprite2DRenderer.cpp  Sprite2DShader.cpp  SpriteManager.cpp  System.cpp  Task.cpp  Texture.cpp  TextureManager.cpp  Transform.cpp  Transform2DComponent.cpp  Transform2DProcessor.cpp  Transform3DComponent.cpp  Transform3DProcessor.cpp  VideoSystem.cpp  glSystem.cpp
src/Core/: CMakeLists.txt  CommandSystem.cpp  EngineConfiguration.cpp  GameEngine.cpp  GameEnginePC.cpp  GeneralTaskManager.cpp  Input.cpp  InputSystem.cpp  Logger.cpp  MessageType.cpp  Messenger.cpp  ModelManager.cpp  Reflection.cpp  ResourceSystem.cpp  Sprite2DShader.cpp  SpriteManager.cpp  System.cpp  Task.cpp  Texture.cpp  TextureManager.cpp  Timer.cpp  VideoRenderer.cpp  VideoSystem.cpp  error_texture.cpp
src/Core/ECS/: BaseEntitySystem.cpp  CMakeLists.txt  Camera2DComponent.cpp  Camera2DProcessor.cpp  Camera3DComponent.cpp  Camera3DProcessor.cpp  ComponentProcessor.cpp  GameLogicProcessor.cpp  RenderableMeshProcessor.cpp  Sprite2DHolder.cpp  Transform2DComponent.cpp  Transform2DProcessor.cpp  Transform3DComponent.cpp  Transform3DProcessor.cpp
src/Core/Graphics/: CMakeLists.txt  Shader.cpp  Sprite2D.cpp
src/Core/Resources/: CMakeLists.txt  DevResourceLoader.cpp  ResourceManager.cpp  SpriteManager.cpp
src/DefImpl/: GLFW_VideoDriver.cpp
src/DefaultBackends/: CMakeLists.txt
src/DefaultBackends/glfw/: GLFW_InputDriver.cpp  GLFW_InputSystem.cpp  GLFW_VideoDriver.cpp  GLFW_VideoSystem.cpp
src/DefaultBackends/opengl/: GLTextureManager.cpp  OpenGL.cpp  ShaderProgram.cpp  error_texture.cpp  glSystem.cpp
src/DefaultBackends/opengl/GL2/: GL2Batch.cpp  GL2BatchSector.cpp  GL2Driver.cpp  GL2Pipeline.cpp  GL2Shader.cpp  GL2ShaderManager.cpp  GL2TextureManager.cpp
src/DefaultShaders/: Sprite2DShader.cpp
src/Graphics/: Graphics.cpp  Sprite2DRenderer.cpp  Sprite2DShader.cpp
src/Tests/: bitset.cpp  reflectiontest.cpp  vectorBoolTest.cpp
tests/: CMakeLists.txt  TestMain.cpp  beTestMain.cpp  test_build.cpp
tests/Common/: bitsetTests.cpp  commonTests.cpp  vectorBoolTests.cpp
tests/Core/: reflectiontest.cpp
tests/Core/Resource/: resourceLoaderTests.cpp
(+270 files in other folders)
